@@ -130,13 +130,45 @@ Ubuntu: `sudo apt install libboost-all-dev`
 
 To build MMCoreJ and the Java application (Micro-Manager Studio), you will need
 a Java Development Kit (JDK). Micro-Manager Java code is written in Java 8
-(a.k.a. Java 1.8). For running Micro-Manager, Java 11 is currently recommended.
+(a.k.a. Java 1.8), which still compiles cleanly with modern `javac` (as of
+JDK 25 this emits deprecation warnings for `-source`/`-target 8`, not errors).
+Building and running with JDK 11 through JDK 25 has been verified to work.
 
-With JDK 17 and above, error may occur like `Unable to make field int
-java.awt.Color.value accessible: module java.desktop does not "opens java.awt"
-to unnamed module @38a8f1a9`.
+On JDK 17 and above, the launch scripts must pass an `--add-opens` flag for
+a package that Micro-Manager accesses reflectively, or you will see errors
+like `Unable to make field ... accessible: module java.desktop does not
+"opens ..." to unnamed module`:
 
-On macOS, install Temurin or Zulu JDK 11, and set `JAVA_HOME`:
+```
+--add-opens=java.desktop/sun.awt=ALL-UNNAMED
+```
+
+This flag is understood by JDK 11 too (`--add-opens` has existed since JDK 9),
+so the shipped launchers (`buildscripts/launchers/*.in`, `bindist/x64/ImageJ.cfg`,
+`bindist/MacOSX/ImageJ.app/Contents/Info.plist`, `docker/micromanager.sh`)
+include it unconditionally.
+
+They also pass `--enable-native-access=ALL-UNNAMED` where possible, a
+defensive flag against JNI native-access warnings on JDK 24+ (JEP 472). This
+one is JDK 17+ *only* — older JDKs fail to start entirely if passed an option
+they don't recognize — so the Unix shell launchers
+(`buildscripts/launchers/*.in`, `docker/micromanager.sh`) detect the selected
+JDK's version at runtime and only add it when supported. The static Windows
+(`bindist/x64/ImageJ.cfg`) and macOS (`Info.plist`) configs can't do that kind
+of conditional logic, and since their documented/bundled runtime is JDK 11,
+this flag is simply omitted from those two.
+
+If you build or launch Micro-Manager outside of these scripts on JDK 17+, add
+both flags yourself; on JDK 11-16, only the `--add-opens` one. (Earlier
+versions of these scripts also carried
+`--add-opens=java.desktop/java.awt=ALL-UNNAMED` and
+`.../java.awt.color=ALL-UNNAMED`, needed because `Color` fields were
+serialized via Gson's reflective fallback; `ChannelSpec`/`SequenceSettings`
+now use a dedicated `ColorGsonAdapter` instead, so those two are no longer
+needed.)
+
+On macOS, install a Temurin or Zulu JDK (11 or later; 17+ also works given
+the flags above), and set `JAVA_HOME`:
 
 ```bash
 export JAVA_HOME=$(/usr/libexec/java_home -v 11 -F)
